auth için servisler yazıldı

--- a/YurtYonetim.Bll/YurtYonetim.Bll.csproj
+++ b/YurtYonetim.Bll/YurtYonetim.Bll.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="EntityCore\Abstract\Systems\" />
-    <Folder Include="EntityCore\Concrete\Systems\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\YurtYonetim.Dal\YurtYonetim.Dal.csproj" />
+    <ProjectReference Include="..\YurtYonetim.Dto\YurtYonetim.Dto.csproj" />
   </ItemGroup>
 
 </Project>
