--- a/YurtYonetim-UI/yurt-yonetim/package.json
+++ b/YurtYonetim-UI/yurt-yonetim/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.1",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -29,6 +31,7 @@
     "@angular/cli": "~11.2.4",
     "@angular/compiler-cli": "~11.2.5",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
