--- a/YurtYonetim-UI/yurt-yonetim/package.json
+++ b/YurtYonetim-UI/yurt-yonetim/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.1",
     "ngx-toastr": "^10.0.4",
