--- a/YurtYonetim-UI/yurt-yonetim/package.json
+++ b/YurtYonetim-UI/yurt-yonetim/package.json
@@ -22,8 +22,10 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.1",
-    "ngx-toastr": "^10.0.4",
+    "ngx-toastr": "^13.2.1",
+    "ngx-image-cropper": "1.3.5",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
