--- a/YurtYonetim.Api/YurtYonetim.Api.csproj
+++ b/YurtYonetim.Api/YurtYonetim.Api.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\YurtYonetim.Dal\YurtYonetim.Dal.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
